# redgiant

./: .gitignore  README.md  pyproject.toml
redgiant/: main.py  memory.py  sensors.py  tui.py
